--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<div class="testing__background">
 					<div class="testing__column">
 						<div class="testing__row">
-							<div class="testing__text testing__text-left">
+							<div class="testing__text">
 								<h2>Application penetration testing</h2>
 								<div class="testing__par-learn">
 									<p>The testing may include code analysis, information leakage testing, protocol analysis, and more. A report is generated at the end of the testing process detailing the vulnerabilities discovered and recommendations for addressing them.</p>
@@ -33,7 +33,7 @@
 							<div class="testing__img">
 								<img src="./img/testing-2.jpg" alt="/">
 							</div>
-							<div class="testing__text testing__text-right testing__text-black">
+							<div class="testing__text">
 								<h2 class="testing__text-white">Code Security Assessment</h2>
 								<div class="testing__par-learn">
 									<p class="testing__text-white">It’s include code analysis, information leakage testing, protocol analysis, and more. A report is generated at the end of the testing process detailing the vulnerabilities discovered and recommendations for addressing them.</p>
@@ -46,7 +46,7 @@
 							</div>
 						</div>
 						<div class="testing__row">
-							<div class="testing__text testing__text-left testing__text-black">
+							<div class="testing__text">
 								<h2 class="testing__text-white">Network Security Testing</h2>
 								<div class="testing__par-learn">
 									<p class="testing__text-white">It’s involves assessing the security of a network infrastructure by analyzing its components, configurations, and vulnerabilities. This service typically includes identifying potential entry points for unauthorized access, testing for network and system vulnerabilities, verifying proper security controls and configurations, and providing recommendations to improve overall network security.</p>
@@ -65,7 +65,7 @@
 							<div class="testing__img">
 								<img src="./img/testing-4.jpg" alt="/">
 							</div>
-							<div class="testing__text testing__text-right">
+							<div class="testing__text">
 								<h2>Compliance testing</h2>
 								<div class="testing__par-learn">
 									<p>It’s testing for compliance with security standards such as PCI DSS, HIPAA, GDPR, and others.</p>
